[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/images/player/player_dead.png" type="Texture" id=1]
[ext_resource path="res://src/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/images/player/player_shoot.png" type="Texture" id=3]
[ext_resource path="res://assets/images/player/player_idle.png" type="Texture" id=4]
[ext_resource path="res://assets/images/player/player_run.png" type="Texture" id=5]
[ext_resource path="res://assets/sounds/electric_death.wav" type="AudioStream" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 5 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "run",
"speed": 12.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 3.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "dead",
"speed": 10.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ) ],
"loop": false,
"name": "shoot",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=11]
radius = 8.05894
height = 12.3516

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
collision_layer = 2
collision_mask = 31
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
self_modulate = Color( 0, 1, 0, 1 )
frames = SubResource( 10 )
animation = "run"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 11 )

[node name="FacingRight" type="Position2D" parent="."]
position = Vector2( 9, -7 )

[node name="FacingUp" type="Position2D" parent="."]
position = Vector2( 0, -16.333 )

[node name="FacingDown" type="Position2D" parent="."]
position = Vector2( 0, 2.333 )

[node name="FacingLeft" type="Position2D" parent="."]
position = Vector2( -9, -7 )

[node name="DeadScream" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -20.0
